--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/hands": "^0.4.1675469240",
     "@tailwindcss/vite": "^4.1.5",
+    "@tensorflow/tfjs": "^4.22.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
