--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mediapipe/hands": "^0.4.1675469240",
     "@tailwindcss/vite": "^4.1.5",
     "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.22.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
